updates to make it compile

--- a/2TF1.tex
+++ b/2TF1.tex
@@ -1,4 +1,3 @@
-\newpage
 \section{Task Force 1}
 \label{chapter2}
 \textit{}
@@ -18,8 +17,7 @@ The first school will take place in 2014 hosted in Ecuador close to the dates fo
 
 \subsubsection{Results}
 
-We managed to organize three schools.
-They took place in Quito (2014), Bogot\'a (2015) and Lima (2018). 
+We managed to organize three schools in Quito (2014), Bogot\'a (2015) and Lima (2018). 
 
 The first school in Quito (2014) was lead by Prof. Nicol\'as V\'asquez at the Escuela Polit\'ecnica Nacional. 
 The school had [XX] students from [COUNTRIES] and [XX] instructors from [COUNTRIES]. 
@@ -27,12 +25,15 @@ The dates of the school were [XXX] and the main teaching subjects were [XXX].
 
 The second school took place in Bogota (June 1 through June 26, 2015). 
 It was lead by Prof. Jaime E. Forero-Romero at Universidad de los Andes. 
-The school had [XX] students from [COUNTRIES] and four instructors from four different countries. 
+The school had [XX] students from [COUNTRIES] and four instructors from working in 
+different countries GGermany (Potsdam Astrophysical Institute), 
+Israel (Hebrew University) and the United States (Caltech and Berkeley Lab)
 The main subject was cosmology in four aspects: theory, simulations, experiment and intrumentation.
 
 The third school was held in Lima (November 12-16, 2018)
 It took place within the third workshop \emph{Astronom\'ia en los Andes}. 
 It was lead by Prof. Maria Isela Zevallos from the Universidad Nacional de Ingenier\'ia.
+The schoold had [XX] students from [COUNTRIES] and [XX] instructores 
 
 
 
@@ -115,14 +116,14 @@ This project did not fulfill its objective.
 \textbf{Implementation:} The leading institutions will organize periodic meetings to gather all the groups in the Andean Region interested in developing its research capabilities in astroparticle physics. This will be done through workshops and the installations of small research stations for the Latin American Giant Observatory (LAGO) project, which has already been kick-started in Venezuela, Colombia, Ecuador, Peru and Bolivia.
 
 \subsubsection{Results}
-At the Escuela Politécnica Nacional of Quito Ecuador it was created the \href{http://201.159.223.36/poli/index.php}{astroparticles laboratory}. Also, the institution continue working with the \href{http://lagoproject.net/}{Colaboración Lago}, this collaboration is presided by Ivan Sidelnick \email{ivan.sidelnik@gmail.com}.
+At the Escuela Politécnica Nacional of Quito Ecuador it was created the \href{http://201.159.223.36/poli/index.php}{astroparticles laboratory}. Also, the institution continue working with the \href{http://lagoproject.net/}{Colaboración Lago}, this collaboration is presided by Ivan Sidelnick. %\email{ivan.sidelnik@gmail.com}.
 
 In Ecuador, in the National Polytechnic School was created the Ecuatorian Network of Cosmic Rays, Astroparticles and Space Weather with the particpitacion of the National Polytechnic School, San Francisco University of Quito and the Chimborazo Polytechnic School. \href{Astroparticle Laboratory of the  National Polytechnic School}{http://201.159.223.36/poli/index.php}
 %Another teacher of this network is working at Yachat Tech.
 
 Also, it was organized in Quito the VII School of Cosmic Rays and Astroparticles by Oscar Saavedra, on August 2017.
 \\
-In the 2020 will be the VIII School of Cosmic Rays and Astroparticles in Bolivia, the organizer is Martín Alfonso Subieta \email{martin.alfonso.subieta.vasquez@cern.ch}.
+In the 2020 will be the VIII School of Cosmic Rays and Astroparticles in Bolivia, the organizer is Martín Alfonso Subieta %\email{martin.alfonso.subieta.vasquez@cern.ch}.
 
 
 %#######################################################
@@ -141,10 +142,10 @@ In the 2020 will be the VIII School of Cosmic Rays and Astroparticles in Bolivia
 In radioastronomy was consolidated a work network between Universities of Chile and Colombia.
 These universities are:
 \begin{enumerate}
-    \ item Industrial University of Santander (UIS) with the contact of Professor Julián Rodríguez
-    \ item ECCI University, contact Professor Germán Chaparro and Oscar Restrepo.
-    \ item University of Chile, Contact Professor Patricio Mena and Oscar Restrepo.
-    \ item Catholic University of La Santisima Concepción, Professor Ricardo Bustos
+    \item Industrial University of Santander (UIS) with the contact of Professor Julián Rodríguez
+    \item ECCI University, contact Professor Germán Chaparro and Oscar Restrepo.
+    \item University of Chile, Contact Professor Patricio Mena and Oscar Restrepo.
+    \item Catholic University of La Santisima Concepción, Professor Ricardo Bustos
 \end{enumerate}
 
 With the previous group of researchers, it was possible established a work network and began on a joint project that was presented to the National Spectrum Agency (ANE), this project was approved and is already in execution. As part of the participation from Chile, the participation of Professor Ricardo Bustos in the IX International Congress "Spectrum for sustainable development" organized by the ANE in September 2019 was achieved. In this participation, the network created and the work was commented on Future to develop in Colombia in the field of Radio astronomy.
@@ -214,21 +215,20 @@ They also participated as guests:
  The organization only obtained local financing from the following institutions:
  
  \begin{itemize}
-    \begin{enumerate}
         \item The National University of Engineering (Vice-Rectorate for Research, Faculty of Sciences, and Patronato UNI) that financed the tickets, stay and travel expenses for four guests.
         \item The National University of Trujillo and the Trujillana Astronomy Association (the latter is an amateur association), supported financially, also
-        \item The National Aerospace Research and Development Coordination (CONIDA).\\
-        \newline
+        \item The National Aerospace Research and Development Coordination (CONIDA).
         Further,
         \item The Regional Office of Astronomy for Development at the Andean Level of the International Astronomical Union resolved the accommodation for 10 students from Ecuador, Colombia, Venezuela, Argentina and the interior of Peru.
         \item The committee apply for the call of Office of External Activities - International Center for Theoretical Physics (OAS-ICTP), but they do not get financing.
-    \end{enumerate}
-    
+\end{itemize}
+
+\begin{itemize}    
     \item Another challenge was to get the participation of researchers, amateurs and students from all the Andean Node countries. No participants came from Bolivia, nor from Chile; I received emails of interest from Bolivia but only a few days before the start of the event, when they could not apply for financial support. In the case of Chile, there were two registered but did not get financing from their institutions. The publicity of the event did not reach everyone in a timely manner. Due to the lack of budget it could not have more invited researchers, except the invited exhibitors. It should be noted that the invited researchers from Colombia and Ecuador who exhibited fully paid for their trip.
     
     \item At the local level, there was no considerable participation of school teachers in the "Astronomy in school" mini-course as it was expected. There were very few registered and not all attended. In Peru, TF2 is not very developed and one of the objectives was to promote the interest of teachers in this area.
     
     \item The most numerous participation was that of university students followed by that of the fans and, finally, the professors. The scientific community in Astronomy in Peru is small, but most of them attended. 
-
+\end{itemize}
 
 %#######################################################
