--- a/3TF2.tex
+++ b/3TF2.tex
@@ -28,7 +28,7 @@ Here was exposed the tasks acquired by the TF2, related with Astronomy for Child
 \textbf{Implementation.} Develop a virtual platform to hold virtual workshops on information technologies applied to astronomy and space sciences.
 
 \subsubsection{Achievements}
-From the National Polytechnic School of Ecuador was reported the continuation of the courses NASE Coaque, Manabí, from 2nd to 6th Septemeber, 2019: Courses of Astronomy, the website of the course is \href{http://sac.csic.es/astrosecundaria/es/cursos/realizados/reglados/145_ecuador_2019/ListaDocs.php}{here}, the responsible is \email{marcela.morillo@utc.edu.ec}.
+From the National Polytechnic School of Ecuador was reported the continuation of the courses NASE Coaque, Manabí, from 2nd to 6th Septemeber, 2019: Courses of Astronomy, the website of the course is \href{http://sac.csic.es/astrosecundaria/es/cursos/realizados/reglados/145_ecuador_2019/ListaDocs.php}{here}, the responsible is %\email{marcela.morillo@utc.edu.ec}.
 
 %#######################################################
 
