--- a/5TFX.tex
+++ b/5TFX.tex
@@ -24,7 +24,7 @@
 
     \item Participation in the IAU General Assembly and participation in the OAD working group, through the award of an IAU scholarship (poster presentation and oral presentation), in Honolulu, USA, August 2015.
 
-    \item Integration to 3 Working Groups of IAU Commissions to strengthen participation of institutions and visibility of Latin American initiatives (C2 WG CAP Journal, C1 WG Network for Astronomy School Education (NASE) and C2 WG Outreach Professionalization & Accreditation), August 2015.
+    \item Integration to 3 Working Groups of IAU Commissions to strengthen participation of institutions and visibility of Latin American initiatives (C2 WG CAP Journal, C1 WG Network for Astronomy School Education (NASE) and C2 WG Outreach Professionalization \& Accreditation), August 2015.
 
     \item Strategic contact with initiative UAbierta of the U. of Chile, to explore requirements in giving a Massive Online Open Course (MOOC) on general astronomy open to participants from South America, with emphasis on Node countries, January 2016.
 
@@ -78,6 +78,6 @@ En el 9 CNEF se manifiesta un variado espectro de opciones, reflexiones, propues
 De esta forma, cada participante encuentra opciones para cambiar, contextualizar y transformar la forma de ver el mundo del aula desde la física y los fenómenos que se presentan en ella; esencia fundamental de la comunidad de profesionales en docencia de la física.
 En el marco de esta versión del Congreso, tendrá lugar el simposio: “Historiadoras de las ciencias aportes a la formación de Licenciados en Física”, como escenario para la construcción de alternativas y fortalecimiento de los procesos de renovación de los programas de Licenciatura en Física.
 FECHA:Noviembre 7, 8 y 9 de 2018
-Lugar: Universidad Antonio Nariño. Sede Nicolás de Federmán. Calle 58 A #37-94 Bogotá, Colombia
+Lugar: Universidad Antonio Nariño. Sede Nicolás de Federmán. Calle 58 A \#37-94 Bogotá, Colombia
 CONVOCAN: Asociación Colombiana de Profesores de Física-ZEMAKAITA, Universidad Distrital Francisco José de Caldas, Universidad Pedagógica Nacional
 APOYAN: Universidad Antonio Nariño, Universidad de Nariño, Universidad del Valle, Universidad Nacional de Salta-Argentina, Red de profesores del Distrito Capital. Nodo de Ciencias y Matemáticas, Secretaria de Educación de Cundinamarca, Secretaria de Educación de Bogotá.
