--- a/main.tex
+++ b/main.tex
@@ -113,7 +113,7 @@ This document collects the progress, results or difficulties of the Andean ROAD 
 \input{4TF3.tex}
 \input{5TFX.tex}
 \input{6Venezuela.tex}
-\input{7Summary.tex}
+%\input{7Summary.tex}
 
 
 %bibliography
