--- a/1Introduction.tex
+++ b/1Introduction.tex
@@ -23,5 +23,28 @@ Therefore our main goal is to guarantee and strengthen effective methods of comm
 in other cities and regions. This lead us to define the following objectives.
  
 
+\newpage
+\section{Score Card}
 
-\textbf{TOMADO DE LA PROPUESTA}
+\begin{table}[!h]
+\begin{center}
+\begin{tabular}{lp{9cm}r}
+Task Force & Project & Score (0-10)\\\hline
+1 & Andean School On Astronommy Astrophysics & 6\\
+1 & Andean Graduate Program & 0 \\
+1 & Exploration Working Group in Astroparticle Physics & 5\\
+1 & Exploration Working Group in Radioastronomy & 5\\
+1 & Massive Oopen Online Courses & 0 \\ 
+1-2-3 & Communitacion Network & 10\\
+2  & Periodic Coordination Sessions & 2\\
+2 & Virtual Training Sessions & 2\\
+2 & Teaching Material for Visually Impaired Students & 5\\
+2 & Annual TF2 Meeting & 2\\
+3 & Development for planetariusm & 0\\
+3 & Communicating Astronomy with the Public & 2\\\hline
+ & \textbf{Average} & 3.25\\ 
+\end{tabular}
+\end{center}
+\end{table}
+
+
