--- a/main.tex
+++ b/main.tex
@@ -68,11 +68,13 @@
 \normalfont \normalsize 
 \textsc{} \\ [25pt] % Your university, school and/or department name(s)
 \horrule{0.5pt} \\[0.4cm] % Thin top horizontal rule
-\huge  Report - 4 Years of the Andean ROAD\\ % The assignment title
+\huge  7 Years of the Andean Regional Office of Astronomy for Development\\ 2014-2020 % The assignment title
 \horrule{2pt} \\[0.5cm] % Thick bottom horizontal rule
 }
 
-\author{Forero Romero, Jaime Ernesto} % Your name
+\author{G. Chaparro (Universidad de Antioquia, Colombia)\\
+J. E. Forero-Romero (Los Andes University, Colombia)\\
+A. P\'erez (Parque Explora, Colombia)} % Your name
 
 \date{\normalsize\today} % Today's date or a custom date
 
